--- a/src/Makefile.local
+++ b/src/Makefile.local
@@ -3,7 +3,7 @@ coqgraph: coqgraph.ml
 
 deps.dot: $(VFILES) coqgraph
 	./coqgraph $(VDFILE).d |\
-	sed -e 's/color \?= \?grey95,/& URL="RandBoolGames.\\N.html",/' |\
+	sed -e 's/color \?= \?grey95,/& URL="BoolGames.\\N.html",/' |\
 	tred > $@
 
 deps.png: deps.dot
@@ -25,4 +25,4 @@ clean::
 	$(HIDE)rm -f deps.dot deps.png deps.html
 
 dist: $(VFILES) AUTHORS README configure _CoqProject Makefile.local coqgraph.ml
-	T=$$(mktemp -d ../dist0.XXX) && S=$$T/rand-bool-games && mkdir -p $$S && rsync -rlpgoDvR $^ $$S && rm -f ../dist0 && ln -rsv $$T ../dist0
+	T=$$(mktemp -d ../dist0.XXX) && S=$$T/BoolGames && mkdir -p $$S && rsync -rlpgoDvR $^ $$S && rm -f ../dist0 && ln -rsv $$T ../dist0
