--- a/Makefile.local
+++ b/Makefile.local
@@ -26,4 +26,4 @@ clean::
 	$(HIDE)rm -f deps.dot deps.png deps.html
 
 dist: $(VFILES) AUTHORS README configure _CoqProject Makefile.local coqgraph.ml
-	T=$$(mktemp -d ./dist0.XXX) && S=$$T/BoolGames && mkdir -p $$S && rsync -rlpgoDvR $^ $$S && rm -f ./dist0 && ln -rsv $$T ./dist0
+	T=$$(mktemp -d ./dist0.XXX) && S=$$T/coq-bool-games && mkdir -p $$S && rsync -rlpgoDvR $^ $$S && rm -f ./dist0 && ln -rsv $$T ./dist0
